<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:text="@string/titulo"
        android:textColor="#9bdab3"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSeach"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="#190a12"
        android:textColorHint="#190a12"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ibtnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#9bdab3"
        android:clickable="false"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        app:srcCompat="@drawable/baseline_location_searching_24" />

    <Spinner
        android:id="@+id/spnArtista"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/marca_redonda"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSeach"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/rgpAsientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnArtista">

        <RadioButton
            android:id="@+id/rbNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:text="@string/normal"
            android:textColor="#190a12" />

        <RadioButton
            android:id="@+id/rbPremium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/premium"
            android:textColor="#190a12" />

    </RadioGroup>

    <ListView
        android:id="@+id/ltvLugar"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgpAsientos" />

    <EditText
        android:id="@+id/editCosto"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/costo"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textAlignment="center"
        android:textColor="#190a12"
        android:textColorHint="#190a12"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltvLugar" />

    <Spinner
        android:id="@+id/spnHorario"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/marca_redonda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCosto" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ibtnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:backgroundTint="#9bdab3"
        android:clickable="true"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnHorario"
        app:srcCompat="@drawable/baseline_add_circle_outline_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ibtnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#9bdab3"
        android:clickable="false"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@+id/ibtnLimpiar"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/ibtnAgregar"
        app:layout_constraintTop_toBottomOf="@+id/spnHorario"
        app:srcCompat="@drawable/baseline_delete_outline_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ibtnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#9bdab3"
        android:clickable="true"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnHorario"
        app:srcCompat="@drawable/baseline_clear_24" />

</androidx.constraintlayout.widget.ConstraintLayout>